Store neat things (#5)
