# gen/http/neat_thing/server/server.go
@@ -20,6 +20,7 @@ import (
 type Server struct {
 	Mounts         []*MountPoint
 	NeatThingToday http.Handler
+	NewNeatThing   http.Handler
 }
 
 // ErrorNamer is an interface implemented by generated error structs that
@@ -50,9 +51,11 @@ func New(
 	return &Server{
 		Mounts: []*MountPoint{
 			{"NeatThingToday", "GET", "/neat/thing/today"},
+			{"NewNeatThing", "POST", "/neat/thing"},
 			{"../../gen/http/openapi.json", "GET", "/openapi.json"},
 		},
 		NeatThingToday: NewNeatThingTodayHandler(e.NeatThingToday, mux, dec, enc, eh),
+		NewNeatThing:   NewNewNeatThingHandler(e.NewNeatThing, mux, dec, enc, eh),
 	}
 }
 
@@ -62,11 +65,13 @@ func (s *Server) Service() string { return "neatThing" }
 // Use wraps the server handlers with the given middleware.
 func (s *Server) Use(m func(http.Handler) http.Handler) {
 	s.NeatThingToday = m(s.NeatThingToday)
+	s.NewNeatThing = m(s.NewNeatThing)
 }
 
 // Mount configures the mux to serve the neatThing endpoints.
 func Mount(mux goahttp.Muxer, h *Server) {
 	MountNeatThingTodayHandler(mux, h.NeatThingToday)
+	MountNewNeatThingHandler(mux, h.NewNeatThing)
 	MountGenHTTPOpenapiJSON(mux, http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
 		http.ServeFile(w, r, "../../gen/http/openapi.json")
 	}))
@@ -103,6 +108,58 @@ func NewNeatThingTodayHandler(
 		ctx = context.WithValue(ctx, goa.ServiceKey, "neatThing")
 
 		res, err := endpoint(ctx, nil)
+
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+		if err := encodeResponse(ctx, w, res); err != nil {
+			eh(ctx, w, err)
+		}
+	})
+}
+
+// MountNewNeatThingHandler configures the mux to serve the "neatThing" service
+// "newNeatThing" endpoint.
+func MountNewNeatThingHandler(mux goahttp.Muxer, h http.Handler) {
+	f, ok := h.(http.HandlerFunc)
+	if !ok {
+		f = func(w http.ResponseWriter, r *http.Request) {
+			h.ServeHTTP(w, r)
+		}
+	}
+	mux.Handle("POST", "/neat/thing", f)
+}
+
+// NewNewNeatThingHandler creates a HTTP handler which loads the HTTP request
+// and calls the "neatThing" service "newNeatThing" endpoint.
+func NewNewNeatThingHandler(
+	endpoint goa.Endpoint,
+	mux goahttp.Muxer,
+	dec func(*http.Request) goahttp.Decoder,
+	enc func(context.Context, http.ResponseWriter) goahttp.Encoder,
+	eh func(context.Context, http.ResponseWriter, error),
+) http.Handler {
+	var (
+		decodeRequest  = DecodeNewNeatThingRequest(mux, dec)
+		encodeResponse = EncodeNewNeatThingResponse(enc)
+		encodeError    = goahttp.ErrorEncoder(enc)
+	)
+	return http.HandlerFunc(func(w http.ResponseWriter, r *http.Request) {
+		ctx := context.WithValue(r.Context(), goahttp.AcceptTypeKey, r.Header.Get("Accept"))
+		ctx = context.WithValue(ctx, goa.MethodKey, "newNeatThing")
+		ctx = context.WithValue(ctx, goa.ServiceKey, "neatThing")
+		payload, err := decodeRequest(r)
+		if err != nil {
+			if err := encodeError(ctx, w, err); err != nil {
+				eh(ctx, w, err)
+			}
+			return
+		}
+
+		res, err := endpoint(ctx, payload)
 
 		if err != nil {
 			if err := encodeError(ctx, w, err); err != nil {
